--- a/index.html
+++ b/index.html
@@ -10,9 +10,22 @@
 <body>
 
     <main>
-        <header></header>
-        <section></section>
-        <footer></footer>
+
+        <header>
+            <h2>Kimiko Entertainment</h2>
+            <div class="image-container">
+                <img src="images/logo-comiccon.png" />
+            </div>
+        </header>
+
+        <section>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae fugit commodi ipsa quis provident laudantium facere consequuntur nihil molestias. Ducimus natus sed temporibus hic aspernatur repellat facere autem. Placeat nihil dolorum, quasi non eaque molestias? Eum reiciendis neque at.
+        </section>
+
+        <footer>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempore doloremque illo magnam odio assumenda veniam iure nesciunt iste nulla?
+        </footer>
+
     </main>
     
 </body>
