--- a/index.html
+++ b/index.html
@@ -19,11 +19,39 @@
         </header>
 
         <section>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique vitae fugit commodi ipsa quis provident laudantium facere consequuntur nihil molestias. Ducimus natus sed temporibus hic aspernatur repellat facere autem. Placeat nihil dolorum, quasi non eaque molestias? Eum reiciendis neque at.
+
+            <div class="first-info">
+                <div class="first-info-child-one info">
+                    <h2>Your Favorite Heros</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt in sapiente, quos veritatis numquam voluptates?</p>
+                </div>
+                <div class="first-info-child-two info">
+                    <h2>Personalized Experience</h2>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur ullam quod suscipit! Delectus numquam facere quae voluptatibus fugit tempore porro.</p>
+                </div>
+            </div>
+
+            <div class="second-info info">
+                <h2>Kimiko Entertainment Sponsored</h2>
+                <p>We bringing the future of fun and your heros to you locally. We host monthly Comic Con events monthly in different provinces around South Africa.</p>
+            </div>
+
         </section>
 
         <footer>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto tempore doloremque illo magnam odio assumenda veniam iure nesciunt iste nulla?
+            
+            <div class="first-footer-child">
+                <h3>Comicon 2023</h3>
+                <a>Unsubscribe</a>
+            </div>
+            <div class="socials">
+                <h4>Follower Us On Our Socials</h4>
+                <div>
+                    <img src="images/twitter.png">
+                    <img src="images/facebook.png">
+                </div>
+            </div>
+
         </footer>
 
     </main>
